lispbuilder-opengl/opengl/gl_1_1.lisp


(defconstant GL_MAX_MODELVIEW_STACK_DEPTH #x0D36)

(defconstant GL_MAX_NAME_STACK_DEPTH #x0D37)

(defconstant GL_MAX_PROJECTION_STACK_DEPTH #x0D38)

(defconstant GL_MAX_TEXTURE_STACK_DEPTH #x0D39)

(defconstant GL_MAX_EVAL_ORDER #x0D30)

(defconstant GL_MAX_LIGHTS #x0D31)

(defconstant GL_MAX_CLIP_PLANES #x0D32)

(defconstant GL_MAX_TEXTURE_SIZE #x0D33)

(defconstant GL_MAX_PIXEL_MAP_TABLE #x0D34)

(defconstant GL_MAX_VIEWPORT_DIMS #x0D3A)

(defconstant GL_MAX_CLIENT_ATTRIB_STACK_DEPTH #x0D3B)

(defconstant GL_ATTRIB_STACK_DEPTH #x0BB0)

(defconstant GL_CLIENT_ATTRIB_STACK_DEPTH #x0BB1)

(defconstant GL_COLOR_CLEAR_VALUE #x0C22)

(defconstant GL_COLOR_WRITEMASK #x0C23)

(defconstant GL_CURRENT_INDEX #x0B01)

(defconstant GL_CURRENT_COLOR #x0B00)

(defconstant GL_CURRENT_NORMAL #x0B02)

(defconstant GL_CURRENT_RASTER_COLOR #x0B04)

(defconstant GL_CURRENT_RASTER_DISTANCE #x0B09)

(defconstant GL_CURRENT_RASTER_INDEX #x0B05)

(defconstant GL_CURRENT_RASTER_POSITION #x0B07)

(defconstant GL_CURRENT_RASTER_TEXTURE_COORDS #x0B06)

(defconstant GL_CURRENT_RASTER_POSITION_VALID #x0B08)

(defconstant GL_CURRENT_TEXTURE_COORDS #x0B03)

(defconstant GL_INDEX_CLEAR_VALUE #x0C20)

(defconstant GL_INDEX_MODE #x0C30)

(defconstant GL_INDEX_WRITEMASK #x0C21)

(defconstant GL_MODELVIEW_MATRIX #x0BA6)

(defconstant GL_MODELVIEW_STACK_DEPTH #x0BA3)

(defconstant GL_NAME_STACK_DEPTH #x0D70)

(defconstant GL_PROJECTION_MATRIX #x0BA7)

(defconstant GL_PROJECTION_STACK_DEPTH #x0BA4)

(defconstant GL_RENDER_MODE #x0C40)

(defconstant GL_RGBA_MODE #x0C31)

(defconstant GL_TEXTURE_MATRIX #x0BA8)

(defconstant GL_TEXTURE_STACK_DEPTH #x0BA5)

(defconstant GL_VIEWPORT #x0BA2)

(defconstant GL_AUTO_NORMAL #x0D80)

(defconstant GL_MAP1_COLOR_4 #x0D90)

(defconstant GL_MAP1_INDEX #x0D91)

(defconstant GL_MAP1_NORMAL #x0D92)

(defconstant GL_MAP1_TEXTURE_COORD_1 #x0D93)

(defconstant GL_MAP1_TEXTURE_COORD_2 #x0D94)

(defconstant GL_MAP1_TEXTURE_COORD_3 #x0D95)

(defconstant GL_MAP1_TEXTURE_COORD_4 #x0D96)

(defconstant GL_MAP1_VERTEX_3 #x0D97)

(defconstant GL_MAP1_VERTEX_4 #x0D98)

(defconstant GL_MAP2_COLOR_4 #x0DB0)

(defconstant GL_MAP2_INDEX #x0DB1)

(defconstant GL_MAP2_NORMAL #x0DB2)

(defconstant GL_MAP2_TEXTURE_COORD_1 #x0DB3)

(defconstant GL_MAP2_TEXTURE_COORD_2 #x0DB4)

(defconstant GL_MAP2_TEXTURE_COORD_3 #x0DB5)

(defconstant GL_MAP2_TEXTURE_COORD_4 #x0DB6)

(defconstant GL_MAP2_VERTEX_3 #x0DB7)

(defconstant GL_MAP2_VERTEX_4 #x0DB8)

(defconstant GL_MAP1_GRID_DOMAIN #x0DD0)

(defconstant GL_MAP1_GRID_SEGMENTS #x0DD1)

(defconstant GL_MAP2_GRID_DOMAIN #x0DD2)

(defconstant GL_MAP2_GRID_SEGMENTS #x0DD3)

(defconstant GL_COEFF #x0A00)

(defconstant GL_DOMAIN #x0A02)

(defconstant GL_ORDER #x0A01)

(defconstant GL_FOG_HINT #x0C54)

(defconstant GL_LINE_SMOOTH_HINT #x0C52)

(defconstant GL_PERSPECTIVE_CORRECTION_HINT #x0C50)

(defconstant GL_POINT_SMOOTH_HINT #x0C51)

(defconstant GL_POLYGON_SMOOTH_HINT #x0C53)

(defconstant GL_DONT_CARE #x1100)

(defconstant GL_FASTEST #x1101)

(defconstant GL_NICEST #x1102)

(defconstant GL_SCISSOR_TEST #x0C11)

(defconstant GL_SCISSOR_BOX #x0C10)

(defconstant GL_MAP_COLOR #x0D10)

(defconstant GL_MAP_STENCIL #x0D11)

(defconstant GL_INDEX_SHIFT #x0D12)

(defconstant GL_INDEX_OFFSET #x0D13)

(defconstant GL_RED_SCALE #x0D14)

(defconstant GL_RED_BIAS #x0D15)

(defconstant GL_GREEN_SCALE #x0D18)

(defconstant GL_GREEN_BIAS #x0D19)

(defconstant GL_BLUE_SCALE #x0D1A)

(defconstant GL_BLUE_BIAS #x0D1B)

(defconstant GL_ALPHA_SCALE #x0D1C)

(defconstant GL_ALPHA_BIAS #x0D1D)

(defconstant GL_DEPTH_SCALE #x0D1E)

(defconstant GL_DEPTH_BIAS #x0D1F)

(defconstant GL_PIXEL_MAP_S_TO_S_SIZE #x0CB1)

(defconstant GL_PIXEL_MAP_I_TO_I_SIZE #x0CB0)

(defconstant GL_PIXEL_MAP_I_TO_R_SIZE #x0CB2)

(defconstant GL_PIXEL_MAP_I_TO_G_SIZE #x0CB3)

(defconstant GL_PIXEL_MAP_I_TO_B_SIZE #x0CB4)

(defconstant GL_PIXEL_MAP_I_TO_A_SIZE #x0CB5)

(defconstant GL_PIXEL_MAP_R_TO_R_SIZE #x0CB6)

(defconstant GL_PIXEL_MAP_G_TO_G_SIZE #x0CB7)

(defconstant GL_PIXEL_MAP_B_TO_B_SIZE #x0CB8)

(defconstant GL_PIXEL_MAP_A_TO_A_SIZE #x0CB9)

(defconstant GL_PIXEL_MAP_S_TO_S #x0C71)

(defconstant GL_PIXEL_MAP_I_TO_I #x0C70)

(defconstant GL_PIXEL_MAP_I_TO_R #x0C72)

(defconstant GL_PIXEL_MAP_I_TO_G #x0C73)

(defconstant GL_PIXEL_MAP_I_TO_B #x0C74)

(defconstant GL_PIXEL_MAP_I_TO_A #x0C75)

(defconstant GL_PIXEL_MAP_R_TO_R #x0C76)

(defconstant GL_PIXEL_MAP_G_TO_G #x0C77)

(defconstant GL_PIXEL_MAP_B_TO_B #x0C78)

(defconstant GL_PIXEL_MAP_A_TO_A #x0C79)

(defconstant GL_PACK_ALIGNMENT #x0D05)

(defconstant GL_PACK_LSB_FIRST #x0D01)

(defconstant GL_PACK_ROW_LENGTH #x0D02)

(defconstant GL_PACK_SKIP_PIXELS #x0D04)

(defconstant GL_PACK_SKIP_ROWS #x0D03)

(defconstant GL_PACK_SWAP_BYTES #x0D00)

(defconstant GL_UNPACK_ALIGNMENT #x0CF5)

(defconstant GL_UNPACK_LSB_FIRST #x0CF1)

(defconstant GL_UNPACK_ROW_LENGTH #x0CF2)

(defconstant GL_UNPACK_SKIP_PIXELS #x0CF4)

(defconstant GL_UNPACK_SKIP_ROWS #x0CF3)

(defconstant GL_UNPACK_SWAP_BYTES #x0CF0)

(defconstant GL_ZOOM_X #x0D16)

(defconstant GL_ZOOM_Y #x0D17)

(defconstant GL_TEXTURE_ENV #x2300)

(defconstant GL_TEXTURE_ENV_MODE #x2200)

(defconstant GL_TEXTURE_1D #x0DE0)

(defconstant GL_TEXTURE_2D #x0DE1)

(defconstant GL_TEXTURE_WRAP_S #x2802)

(defconstant GL_TEXTURE_WRAP_T #x2803)

(defconstant GL_TEXTURE_MAG_FILTER #x2800)

(defconstant GL_TEXTURE_MIN_FILTER #x2801)

(defconstant GL_TEXTURE_ENV_COLOR #x2201)

(defconstant GL_TEXTURE_GEN_S #x0C60)

(defconstant GL_TEXTURE_GEN_T #x0C61)

(defconstant GL_TEXTURE_GEN_MODE #x2500)

(defconstant GL_TEXTURE_BORDER_COLOR #x1004)

(defconstant GL_TEXTURE_WIDTH #x1000)

(defconstant GL_TEXTURE_HEIGHT #x1001)

(defconstant GL_TEXTURE_BORDER #x1005)

(defconstant GL_TEXTURE_COMPONENTS #x1003)

(defconstant GL_TEXTURE_RED_SIZE #x805C)

(defconstant GL_TEXTURE_GREEN_SIZE #x805D)

(defconstant GL_TEXTURE_BLUE_SIZE #x805E)

(defconstant GL_TEXTURE_ALPHA_SIZE #x805F)

(defconstant GL_TEXTURE_LUMINANCE_SIZE #x8060)

(defconstant GL_TEXTURE_INTENSITY_SIZE #x8061)

(defconstant GL_NEAREST_MIPMAP_NEAREST #x2700)

(defconstant GL_NEAREST_MIPMAP_LINEAR #x2702)

(defconstant GL_LINEAR_MIPMAP_NEAREST #x2701)

(defconstant GL_LINEAR_MIPMAP_LINEAR #x2703)

(defconstant GL_OBJECT_LINEAR #x2401)

(defconstant GL_OBJECT_PLANE #x2501)

(defconstant GL_EYE_LINEAR #x2400)

(defconstant GL_EYE_PLANE #x2502)

(defconstant GL_SPHERE_MAP #x2402)

(defconstant GL_DECAL #x2101)

(defconstant GL_MODULATE #x2100)

(defconstant GL_NEAREST #x2600)

(defconstant GL_REPEAT #x2901)

(defconstant GL_CLAMP #x2900)

(defconstant GL_S #x2000)

(defconstant GL_T #x2001)

(defconstant GL_R #x2002)

(defconstant GL_Q #x2003)

(defconstant GL_TEXTURE_GEN_R #x0C62)

(defconstant GL_TEXTURE_GEN_Q #x0C63)

(defconstant GL_VENDOR #x1F00)

(defconstant GL_RENDERER #x1F01)

(defconstant GL_VERSION #x1F02)

(defconstant GL_EXTENSIONS #x1F03)

(defconstant GL_NO_ERROR #x0)

(defconstant GL_INVALID_VALUE #x0501)

(defconstant GL_INVALID_ENUM #x0500)

(defconstant GL_INVALID_OPERATION #x0502)

(defconstant GL_STACK_OVERFLOW #x0503)

(defconstant GL_STACK_UNDERFLOW #x0504)

(defconstant GL_OUT_OF_MEMORY #x0505)

(defconstant GL_CURRENT_BIT #x00000001)

(defconstant GL_POINT_BIT #x00000002)

(defconstant GL_LINE_BIT #x00000004)

(defconstant GL_POLYGON_BIT #x00000008)

(defconstant GL_POLYGON_STIPPLE_BIT #x00000010)

(defconstant GL_PIXEL_MODE_BIT #x00000020)

(defconstant GL_LIGHTING_BIT #x00000040)

(defconstant GL_FOG_BIT #x00000080)

(defconstant GL_DEPTH_BUFFER_BIT #x00000100)

(defconstant GL_ACCUM_BUFFER_BIT #x00000200)

(defconstant GL_STENCIL_BUFFER_BIT #x00000400)

(defconstant GL_VIEWPORT_BIT #x00000800)

(defconstant GL_TRANSFORM_BIT #x00001000)

(defconstant GL_ENABLE_BIT #x00002000)

(defconstant GL_COLOR_BUFFER_BIT #x00004000)

(defconstant GL_HINT_BIT #x00008000)

(defconstant GL_EVAL_BIT #x00010000)

(defconstant GL_LIST_BIT #x00020000)

(defconstant GL_TEXTURE_BIT #x00040000)

(defconstant GL_SCISSOR_BIT #x00080000)

(defconstant GL_ALL_ATTRIB_BITS #x000FFFFF)

(defconstant GL_PROXY_TEXTURE_1D #x8063)

(defconstant GL_PROXY_TEXTURE_2D #x8064)

(defconstant GL_TEXTURE_PRIORITY #x8066)

(defconstant GL_TEXTURE_RESIDENT #x8067)

(defconstant GL_TEXTURE_BINDING_1D #x8068)

(defconstant GL_TEXTURE_BINDING_2D #x8069)

(defconstant GL_TEXTURE_INTERNAL_FORMAT #x1003)

(defconstant GL_ALPHA4 #x803B)

(defconstant GL_ALPHA8 #x803C)

(defconstant GL_ALPHA12 #x803D)

(defconstant GL_ALPHA16 #x803E)

(defconstant GL_LUMINANCE4 #x803F)

(defconstant GL_LUMINANCE8 #x8040)

(defconstant GL_LUMINANCE12 #x8041)

(defconstant GL_LUMINANCE16 #x8042)

(defconstant GL_LUMINANCE4_ALPHA4 #x8043)

(defconstant GL_LUMINANCE6_ALPHA2 #x8044)

(defconstant GL_LUMINANCE8_ALPHA8 #x8045)

(defconstant GL_LUMINANCE12_ALPHA4 #x8046)

(defconstant GL_LUMINANCE12_ALPHA12 #x8047)

(defconstant GL_LUMINANCE16_ALPHA16 #x8048)

(defconstant GL_INTENSITY #x8049)

(defconstant GL_INTENSITY4 #x804A)

(defconstant GL_INTENSITY8 #x804B)

(defconstant GL_INTENSITY12 #x804C)

(defconstant GL_INTENSITY16 #x804D)

(defconstant GL_R3_G3_B2 #x2A10)

(defconstant GL_RGB4 #x804F)

(defconstant GL_RGB5 #x8050)

(defconstant GL_RGB8 #x8051)

(defconstant GL_RGB10 #x8052)

(defconstant GL_RGB12 #x8053)

(defconstant GL_RGB16 #x8054)

(defconstant GL_RGBA2 #x8055)

(defconstant GL_RGBA4 #x8056)

(defconstant GL_RGB5_A1 #x8057)

(defconstant GL_RGBA8 #x8058)

(defconstant GL_RGB10_A2 #x8059)

(defconstant GL_RGBA12 #x805A)

(defconstant GL_RGBA16 #x805B)

(defconstant GL_CLIENT_PIXEL_STORE_BIT #x00000001)

(defconstant GL_CLIENT_VERTEX_ARRAY_BIT #x00000002)

(defconstant GL_ALL_CLIENT_ATTRIB_BITS #xFFFFFFFF)

(defconstant GL_CLIENT_ALL_ATTRIB_BITS #xFFFFFFFF)

(defcfun ("glClearIndex" glClearIndex) :void
  (c :float))

(defcfun ("glClearColor" glClearColor) :void
  (red :float)
  (green :float)
  (blue :float)
  (alpha :float))

(defcfun ("glClear" glClear) :void
  (mask :unsigned-int))

(defcfun ("glIndexMask" glIndexMask) :void
  (mask :unsigned-int))

(defcfun ("glColorMask" glColorMask) :void
  (red :unsigned-char)
  (green :unsigned-char)
  (blue :unsigned-char)
  (alpha :unsigned-char))

(defcfun ("glAlphaFunc" glAlphaFunc) :void
  (func :unsigned-int)
  (ref :float))

(defcfun ("glBlendFunc" glBlendFunc) :void
  (sfactor :unsigned-int)
  (dfactor :unsigned-int))

(defcfun ("glLogicOp" glLogicOp) :void
  (opcode :unsigned-int))

(defcfun ("glCullFace" glCullFace) :void
  (mode :unsigned-int))

(defcfun ("glFrontFace" glFrontFace) :void
  (mode :unsigned-int))

(defcfun ("glPointSize" glPointSize) :void
  (size :float))

(defcfun ("glLineWidth" glLineWidth) :void
  (width :float))

(defcfun ("glLineStipple" glLineStipple) :void
  (factor :int)
  (pattern :unsigned-short))

(defcfun ("glPolygonMode" glPolygonMode) :void
  (face :unsigned-int)
  (mode :unsigned-int))

(defcfun ("glPolygonOffset" glPolygonOffset) :void
  (factor :float)
  (units :float))

(defcfun ("glPolygonStipple" glPolygonStipple) :void
  (mask :pointer))

(defcfun ("glGetPolygonStipple" glGetPolygonStipple) :void
  (mask :pointer))

(defcfun ("glEdgeFlag" glEdgeFlag) :void
  (flag :unsigned-char))

(defcfun ("glEdgeFlagv" glEdgeFlagv) :void
  (flag :pointer))

(defcfun ("glScissor" glScissor) :void
  (x :int)
  (y :int)
  (width :int)
  (height :int))

(defcfun ("glClipPlane" glClipPlane) :void
  (plane :unsigned-int)
  (equation :pointer))

(defcfun ("glGetClipPlane" glGetClipPlane) :void
  (plane :unsigned-int)
  (equation :pointer))

(defcfun ("glDrawBuffer" glDrawBuffer) :void
  (mode :unsigned-int))

(defcfun ("glReadBuffer" glReadBuffer) :void
  (mode :unsigned-int))

(defcfun ("glEnable" glEnable) :void
  (cap :unsigned-int))

(defcfun ("glDisable" glDisable) :void
  (cap :unsigned-int))

(defcfun ("glIsEnabled" glIsEnabled) :unsigned-char
  (cap :unsigned-int))

(defcfun ("glEnableClientState" glEnableClientState) :void
  (cap :unsigned-int))
